<resources>
    <string name="app_name">Hardware Key Mapper</string>
    <string name="app_description">Using accessibility service to map hardware backed keys to different actions.</string>
    <string name="title_mapping">Hardware Key Mapper</string>

    <!-- Main Preference Titles -->
    <string name="title_service_switch">Accessibility Settings</string>

    <string name="summary_service_switch_enable">
        Hardware Key Mapper is DISABLED. To enable, tap this and then turn Hardware Key Mapper in the
        Services section to ON.
    </string>
    <string name="summary_service_switch_disable">
        Hardware Key Mapper is ENABLED. To disable, tap this and then turn Hardware Key Mapper in the
        Services section to OFF.
    </string>
    <string name="log_service_switch_disabled">Show enable instruction</string>
    <string name="log_service_switch_enabled">Show disable instruction</string>
    <string name="log_service_portrait_bottom">Portrait 0 - buttons on the bottom</string>
    <string name="log_service_landscape_right">Landscape 90 - buttons on the right</string>
    <string name="log_service_portrait_top">Portrait 180 - buttons on the top</string>
    <string name="log_service_landscape_left">Landscape 270 - buttons on the left</string>

    <string name="title_portrait_bottom">Portrait (keys on bottom)</string>
    <string name="title_landscape_right">Landscape (keys on right)</string>
    <string name="title_portrait_top">Portrait (keys on top)</string>
    <string name="title_landscape_left">Landscape (keys on left)</string>

    <string name="title_key_home">Home key</string>
    <string name="title_key_back">Back key</string>
    <string name="title_key_menu">Menu key</string>
    <string name="title_key_search">Search key</string>
    <string name="title_key_app_switch">App switch key</string>
    <string name="title_key_camera">Camera key</string>
    <string name="title_key_volume_up">Volume up key</string>
    <string name="title_key_volume_down">Volume down key</string>
    <string name="title_key_unknown">Unknown</string>

    <!-- Hardware Key Actions -->
    <string name="title_detail_action">Actions</string>
    <string name="title_action_short_press">Short press</string>
    <string name="title_action_long_press">Long press</string>
    <string name="title_detail_overlay">Overlay</string>
    <string name="title_detail_overlay_active">Active</string>
    <string name="title_overlay_app">App</string>
    <string name="title_overlay_intent_down">Intent key down</string>
    <string name="title_overlay_intent_up">Intent key up</string>

    <string name="title_detail_clear_all">Clear All</string>
    <string name="title_detail_clear_actions">Clear Actions</string>
    <string name="title_detail_clear_overlay">Clear Overlay</string>
    <string name="title_detail_clear_short_press">Clear Short press</string>
    <string name="title_detail_clear_long_press">Clear Long press</string>
    <string name="title_detail_clear_app">Clear App</string>
    <string name="title_detail_clear_intent_key_down">Clear Intent key down</string>
    <string name="title_detail_clear_intent_key_up">Clear Intent key up</string>

    <!-- Settings Screen Titles -->
    <string name="title_settings">Settings</string>
    <string name="title_settings_keys">Active hardware keys</string>
    <string name="title_settings_orientations">Active screen orientations</string>

    <!-- Key Strings for text replacement -->
    <string name="key_service_switch">service_enabled</string>
    <string name="key_title_orientation">title</string>
    <string name="key_key_home">key_home</string>
    <string name="key_key_back">key_back</string>
    <string name="key_key_menu">key_menu</string>
    <string name="key_key_search">key_search</string>
    <string name="key_key_app_switch">key_app_switch</string>
    <string name="key_key_camera">key_camera</string>
    <string name="key_key_volume_up">key_volume_up</string>
    <string name="key_key_volume_down">key_volume_down</string>
    <string name="key_key_unknown">key_unknown</string>

    <string name="orientation_portrait_bottom">portrait_bottom</string>
    <string name="orientation_portrait_top">portrait_top</string>
    <string name="orientation_landscape_right">landscape_right</string>
    <string name="orientation_landscape_left">landscape_left</string>

    <string name="key_action_short_press">short_press</string>
    <string name="key_action_long_press">long_press</string>
    <string name="key_overlay_app">app</string>
    <string name="key_overlay_intent_down">intent_down</string>
    <string name="key_overlay_intent_up">intent_up</string>
</resources>